alignment-issue-navbar-slved

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ padding: 10px 10px ;
     font-family: pop-bold !important;
 }
 .navv{
-    /* padding: 0px !important;
-    margin: 0px !important; */
+    padding: 0px !important;
+    margin: 0px !important;
 }
 .nav-center{
     border-radius: 40px;
@@ -147,12 +147,12 @@ to{
 
 .sld-img{
     width: 100%;
-    height: 70vh;
+    /* height: 70vh; */
 
 }
 .sld-img img{
     width: 100%;
-    /* height: 100vh; */
+    height: 100%;
     object-fit: contain;
     filter: drop-shadow( rgba(0, 0, 0, 0.1) 0px 4px 12px);
 }
